firefox scrollbar fixes & auth few design changes firefox scrollbar finally fixed (proper look as in chrome) auth window now takes more space (in height & width)

--- a/websource/src/components/styles/Auth.css
+++ b/websource/src/components/styles/Auth.css
@@ -31,26 +31,24 @@
 }
 
 #userlogo {
-	font-size: 69px;
+	font-size: 70px;
 	background: #ffffff38;
 	border-radius: 50%;
 	-webkit-backdrop-filter: blur(28px);
 	backdrop-filter: blur(28px);
-	width: 80px;
-	height: 80px;
+	width: 90px;
+	height: 90px;
 	text-align: center;
 	font-weight: 100;
 	margin-top: 35px;
 }
 
 #userlogo::before {
-	zoom: 0.9;
+	font-size: 50px;;
 }
 
 .authWindowMain h2 {
-	margin: 0;
-	margin-top:28px;
-	font-size:24px;
+	font-size:26px;
 	font-weight: 100;
 	color: rgb(255, 255, 255);
 }
@@ -65,6 +63,7 @@
 }
 
 #authPassword {
+	width: 270px;
 	font-size: 18px;
 	border-top: none;
 	border-left: none;
@@ -83,9 +82,10 @@
 }
 
 #status {
+	margin-top:10px;
 	height: 25px;
-	margin:0;
-	width: 223px;
+	/* margin:0; */
+	width: 270px;
 	color: #ff4141;
 }
 
@@ -102,9 +102,11 @@
 }
 
 .btn-41 {
+	width: 270px;
 	border: 2px solid rgb(255, 255, 255);
 	z-index: 1;
 	color: white;
+	font-weight: bold;
 }
 
 .btn-41:after {
