--- a/websource/src/pages/styles/home.css
+++ b/websource/src/pages/styles/home.css
@@ -1,13 +1,19 @@
-.homeMenu {
-	margin-top:20px;
-	/* min-height: 100vw; */
-	display: grid;
-	grid-gap: 70px;
-	grid-template-columns: 1fr 0fr;
+h1, h2, h3, a{
+	-webkit-user-select: none; /* Safari */
+	-ms-user-select: none; /* IE 10 and IE 11 */
+	user-select: none; /* Standard syntax */
 }
-
-::-webkit-scrollbar{
-	display: none;
+.homeMenu {
+    margin-top: 20px;
+    /* min-height: 100vw; */
+    display: grid;
+    grid-gap: 70px;
+    grid-template-columns: 0fr 0fr;
+    justify-content: center;
+}
+html, body{
+	scrollbar-color: #222;
+  	scrollbar-width: none;
 }
 
 ::-webkit-scrollbar {
@@ -26,7 +32,7 @@
 
 .darkmode ::-webkit-scrollbar-thumb{
 	background-color: #555;
-	border: 3px solid #666;
+	border: none;
 }
 
 ::-webkit-scrollbar-thumb {
